chore: add jamstack deploy to OSS page

--- a/site/layouts/open-source/list.html
+++ b/site/layouts/open-source/list.html
@@ -66,6 +66,28 @@
 		            </a>
       				</div>
       			</div>
+            <div class="card">
+              <div class="card-image">
+                <img src="/opensource/jam.svg" alt="jamstack deploy" width="101" height="92" />
+              </div>
+              <h5>
+                Jamstack Deploy
+                <span>
+                  <img src="/images/github-star.svg" alt="github start" width="16" height="15" />
+                </span>
+                <span id="jamstack-deploy"></span>
+              </h5>
+              <p>Measure cloud providers and check which fits better for your Jamstack App</p>
+              <div class="cta-wraps">
+                <a class="cta-link" href="https://jamstackdeploy.com" target="_blank" rel="noopener">
+                  <img src="/images/arrow-visit.svg" alt="arrow visit" width="13" height="13" />
+                  Get Jamstack deploy
+                </a>
+                <a class="cta-link" href="https://github.com/checkly/jamstack-deploy" target="_blank" rel="noopener">
+                  See the code
+                </a>
+              </div>
+            </div>
       		</div>
       	</div>
       </section>
