chore: update jamstack deploy link

--- a/site/layouts/open-source/list.html
+++ b/site/layouts/open-source/list.html
@@ -81,7 +81,7 @@
               <div class="cta-wraps">
                 <a class="cta-link" href="https://jamstackdeploy.com" target="_blank" rel="noopener">
                   <img src="/images/arrow-visit.svg" alt="arrow visit" width="13" height="13" />
-                  Get Jamstack deploy
+                  Visit Jamstack Deploy
                 </a>
                 <a class="cta-link" href="https://github.com/checkly/jamstack-deploy" target="_blank" rel="noopener">
                   See the code
