--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -51,6 +51,7 @@
             <li><a href="/learn/headless">Puppeteer & Playwright</a></li>
             <li><a href="/guides/end-to-end-monitoring">End-to-End Monitoring</a></li>
             <li><a href="/guides/monitoring-as-code">Monitoring-as-Code</a></li>
+            <li><a href="/guides/api-monitoring">JAMStack API Monitoring</a></li>
           </ul>
         </div>
       </div>
