feat: add guides index page
* guides-index page desktop design

* mobile design

* update guide description lines

* enable guides menu in the learn dropdown

* update guides menu's link

--- a/site/layouts/partials/navbar.html
+++ b/site/layouts/partials/navbar.html
@@ -66,17 +66,17 @@
                 </div>
               </div>
             </a>
-            <!-- <a class="dropdown-item" href="/product/synthetic-monitoring/">
+            <a class="dropdown-item" href="/guides/">
               <div class="d-flex">
                 <div class="menu-icon">
-                  <img src="/images/icons/guides.svg" alt="Synthetic Monitoring" width="32" height="32" />
+                  <img src="/images/icons/guides.svg" alt="Guides" width="32" height="32" />
                 </div>
                 <div>
                   <div class="menu-title">Guides</div>
                   <div class="menu-text">Learn about API & E2E monitoring and testing.</div>
                 </div>
               </div>
-            </a> -->
+            </a>
             <a class="dropdown-item" href="https://blog.checklyhq.com">
               <div class="d-flex">
                 <div class="menu-icon">
